[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acpi = "5.0.0"
bootloader_api = "0.11.4"
critical-section = { version = "1.1.2", features = ["restore-state-bool"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
lock_api = "0.4.11"
paste = "1.0.14"
raw-cpuid = "11.0.1"
spin = "0.9.8"
static_assertions = "1.1.0"
x86_64 = "0.14.11"
