[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

verbose = []

[dependencies]
acpi = "5.0.0"
bit_field = "0.10.2"
bootloader_api = "0.11.4"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
lock_api = "0.4.11"
paste = "1.0.14"
raw-cpuid = "11.0.1"
spin = "0.9.8"
static_assertions = "1.1.0"
x86_64 = "0.14.11"
bitflags = { version = "2.4.1" }
hashbrown = "0.14.3"
x86 = { git = "https://github.com/ansg191/rust-x86.git" }
